...
  }

  // Close drawer on back button press if it's open
  BackHandler(enabled = drawerState.isOpen) { scope.launch { drawerState.close() } }

  ModalNavigationDrawer(
      modifier = Modifier.testTag("householdSelectionDrawer"),
      drawerState = drawerState,
      drawerContent = {
        ModalDrawerSheet(
            drawerContainerColor = MaterialTheme.colorScheme.surfaceContainerLow,
        ) {
          // Remember the scroll state
...
            HorizontalDivider(modifier = Modifier.padding(horizontal = 16.dp))
            Row(
                modifier = Modifier.fillMaxWidth().padding(16.dp),
                verticalAlignment = Alignment.CenterVertically,
                horizontalArrangement = Arrangement.Center) {
                  IconButton(
                      modifier = Modifier.testTag("addHouseholdIcon"),
                      onClick = {
                        householdSelectionDrawerViewModel.selectHouseholdToEdit(null)
                        navigationActions.navigateTo(Screen.HOUSEHOLD_CREATION)
                      }) {
                        Icon(
                            imageVector = Icons.Default.Add,
...
