...
                containerColor = MaterialTheme.colorScheme.secondaryContainer,
                titleContentColor = MaterialTheme.colorScheme.onSecondaryContainer,
                navigationIconContentColor = MaterialTheme.colorScheme.onSecondaryContainer,
                actionIconContentColor = MaterialTheme.colorScheme.onSecondaryContainer),
        navigationIcon = {
          IconButton(
              modifier = Modifier.testTag("hamburgerIcon"), onClick = { onHamburgerClick() }) {
                Icon(
                    imageVector = Icons.Default.Menu,
                    contentDescription = "Menu Icon",
                )
              }
        },
...
                      contentDescription = "Filter Icon",
                  )
                }
          }
          if (showDeleteOption) {
            IconButton(
                modifier = Modifier.testTag("deleteFoodItems"), onClick = { onDeleteClick() }) {
                  Icon(
                      imageVector = Icons.Default.Delete,
                      contentDescription = "Delete Icon",
                  )
                }
          }
...
